changes made to jenkinsfile, pom.xml and settinf=gs.xml files